# S2TAR

./: .gitignore  README.md
hw/: s2tar.tcl
hw/s2tar.ipdefs/ip/matmul_sa_6/: component.xml
hw/s2tar.ipdefs/ip/matmul_sa_6/doc/: ReleaseNotes.txt
hw/s2tar.ipdefs/ip/matmul_sa_6/drivers/tiled_mm_v1_0/src/: CMakeLists.txt  xtiled_mm.c  xtiled_mm.h  xtiled_mm_hw.h  xtiled_mm_linux.c  xtiled_mm_sinit.c
hw/s2tar.ipdefs/ip/matmul_sa_6/hdl/verilog/: tiled_mm.v  tiled_mm_Block_newFuncRoot_proc_proc.v  tiled_mm_Block_newFuncRoot_proc_proc1.v  tiled_mm_Block_newFuncRoot_proc_proc10.v  tiled_mm_Block_newFuncRoot_proc_proc11.v  tiled_mm_Block_newFuncRoot_proc_proc12.v  tiled_mm_Block_newFuncRoot_proc_proc13.v  tiled_mm_Block_newFuncRoot_proc_proc14.v  tiled_mm_Block_newFuncRoot_proc_proc15.v  tiled_mm_Block_newFuncRoot_proc_proc16.v  tiled_mm_Block_newFuncRoot_proc_proc17.v  tiled_mm_Block_newFuncRoot_proc_proc18.v  tiled_mm_Block_newFuncRoot_proc_proc19.v  tiled_mm_Block_newFuncRoot_proc_proc2.v  tiled_mm_Block_newFuncRoot_proc_proc20.v  tiled_mm_Block_newFuncRoot_proc_proc21.v  tiled_mm_Block_newFuncRoot_proc_proc22.v  tiled_mm_Block_newFuncRoot_proc_proc23.v  tiled_mm_Block_newFuncRoot_proc_proc24.v  tiled_mm_Block_newFuncRoot_proc_proc25.v  tiled_mm_Block_newFuncRoot_proc_proc26.v  tiled_mm_Block_newFuncRoot_proc_proc27.v  tiled_mm_Block_newFuncRoot_proc_proc28.v  tiled_mm_Block_newFuncRoot_proc_proc29.v  (+131 more)
hw/s2tar.ipdefs/ip/matmul_sa_6/xgui/: tiled_mm_v1_0.tcl
hw/s2tar.srcs/constrs_1/new/: constraints.xdc
hw/s2tar.srcs/sources_1/bd/design_1/: design_1.bd
(+185 files in other folders)
